--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Preload images -->
+    <link rel="preload" href="/logo.svg" as="image" />
+    <!-- Fonts -->
+    <link
+      rel="preload"
+      href="/fonts/IBMPlexSans.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
+    <link
+      rel="preload"
+      href="/fonts/BebasNeue.woff2"
+      as="font"
+      type="font/woff2"
+      crossorigin
+    />
     <title>The Rizz Book</title>
   </head>
   <body>
