Feat: Added bottom tabs

--- a/index.html
+++ b/index.html
@@ -21,9 +21,11 @@
       type="font/woff2"
       crossorigin
     />
+    <!-- React Scan -->
+    <!-- <script src="https://unpkg.com/react-scan/dist/auto.global.js"></script> -->
     <title>The Rizz Book</title>
   </head>
-  <body>
+  <body class="font-body">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
