--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Preload images -->
     <link rel="preload" href="/logo.svg" as="image" />
+    <link rel="preload" href="/illustration.svg" as="image" />
     <!-- Fonts -->
     <link
       rel="preload"
