Feat: Added supabase integration

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- Preload images -->
     <link rel="preload" href="/logo.svg" as="image" />
     <link rel="preload" href="/illustration.svg" as="image" />
+    <link rel="preload" href="/illustration2.svg" as="image" />
     <!-- Fonts -->
     <link
       rel="preload"
